# l2-sigreg-lm

./: .gitignore  .gitmodules  AGENTS.md  README.md  SPEC.md  pyproject.toml
docs/: NOTES.md
scripts/: compare.py  lint.sh  run_ce.sh  run_l2.sh  summarize_gradients.py  tokenize_data.py
src/: __init__.py  config.py  data.py  eval.py  model.py  monitor.py  tokenization.py  train.py
