[project]
name = "token-packing-lab"
version = "0.1.0"
description = "Compact M1-friendly lab comparing L2 embedding prediction + SIGReg against CE."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.1.0",
    "matplotlib>=3.10.0",
    "numpy>=2.3.0",
    "scipy>=1.16.0",
    "ruff>=0.9.0",
    "torch>=2.11.0",
    "tiktoken>=0.11.0",
    "transformers>=4.57.0",
    "tqdm>=4.67.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
