[project]
name = "l2-sigreg-lm"
version = "0.1.0"
description = "Compact M1-friendly lab comparing pure L2 embedding prediction + SIGReg against CE."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.1.0",
    "matplotlib>=3.10.0",
    "numpy>=2.3.0",
    "scipy>=1.16.0",
    "ruff>=0.9.0",
    "torch==2.11.0",
    "tiktoken>=0.11.0",
    "transformers>=4.57.0",
    "python-dotenv>=1.1.0",
    "tqdm>=4.67.0",
    "wandb>=0.19.0",
    "lejepa",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
cpu = ["torch==2.11.0"]
gpu = ["torch==2.11.0"]

[tool.uv]
package = true
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]

[tool.uv.sources]
lejepa = { path = "submodules/lejepa", editable = true }
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
